# HOPE

./: .all-contributorsrc  .copier-answers.yml  .gitattributes  .gitignore  .lychee.toml  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE_DEVELOPMENT_SUMMARY.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATION.cff  CODE_IMPROVEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  CONSTRAINT_COMPARISON_ANALYSIS.md  CONSTRAINT_VALIDATION_FINAL_RESULTS.md  DOCUMENTATION_INDEX.md  Devs_Resource.md  FINAL_STATUS_REPORT.md  FINAL_VALIDATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  LICENSE  MINIMAL_PCM_COMPARISON_REPORT.md  MODEL_SIZE_INVESTIGATION_REPORT.md  MULTIPLE_OPTIMAL_SOLUTIONS_ANALYSIS.md  MULTI_SOLVER_VALIDATION.md  NEW_PCM_CORE_FILES.md  NUMERICAL_COMPARISON_REPORT.md  PCM_CONSTRAINT_VALIDATION_FINAL.md  PCM_FORMULATION_COMPARISON.md  PCM_REDESIGN_SUMMARY.md  PCM_VALIDATION_FINAL_REPORT.md  PCM_VALIDATION_FINAL_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_ORGANIZATION_SUMMARY.md  Project.toml  README.md  RENEWABLE_RPS_CONSTRAINT_ANALYSIS.md  VALIDATION_README.md  VERSION_DIFFERENCES.md  check_docs.jl  (+27 more)
.github/: pull_request_template.md
.pre-commit-cache/: db.db
ModelCases/: HOPE_preprocessing_settings.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  generate_rep_day_md_example.py  generate_resource_aggregation_example.py  make.jl
tools/hope_mcp_server/: README.md  pyproject.toml
tools/hope_mcp_server/src/hope_mcp_server/: __init__.py  chatgpt.py  core.py  server.py
tools/hope_mcp_server/tests/: test_core.py
(+1017 files in other folders)
